Need help hidden from mobile. How it works fixed alignment

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -31,6 +31,10 @@ p {
   font-weight: 400;
 }
 
+a {
+  font-size: 1em;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -126,3 +130,30 @@ p {
   font-weight: 900;
 }
 
+/*
+    Custom, iPhone Retina 
+    @media only screen and (min-width : 320px) {
+
+    }
+
+    Extra Small Devices, Phones
+    @media only screen and (min-width : 480px) {
+
+    }
+
+    Small Devices, Tablets
+    @media only screen and (min-width : 768px) {
+
+    }
+
+     Medium Devices, Desktops 
+    @media only screen and (min-width : 992px) {
+
+    }
+
+    Large Devices, Wide Screens 
+    @media only screen and (min-width : 1200px) {
+
+    }
+
+*/
